# object_pool_42

./: .gitignore  README.md
module_00/: CMakeLists.txt
module_00/ex00/: Account.cpp  Account.hpp  Bank.cpp  Bank.hpp  CMakeLists.txt  DivideAndRule.cpp  Makefile  main.cpp
module_00/ex01/: CMakeLists.txt  Graph.cpp  Graph.hpp  Makefile  Vector2.cpp  Vector2.hpp  main.cpp
module_01/ex00/: CMakeLists.txt  Makefile  Shovel.cpp  Shovel.hpp  Worker.cpp  Worker.hpp  main.cpp
module_01/ex00/inc/: Hammer.hpp  Position.hpp  Shovel.hpp  Statistic.hpp  Tool.hpp  Worker.hpp  Workshop.hpp
module_01/ex00/src/: Hammer.cpp  Shovel.cpp  Tool.cpp  Worker.cpp  Workshop.cpp  main.cpp
module_02/ex00/: link.txt
module_03/ex00/: CMakeLists.txt
module_03/ex00/inc/: Car.hpp  Engine.hpp  Gears.hpp  SpeedControl.hpp  Wheels.hpp
module_03/ex00/src/: Car.cpp  Engine.cpp  Gears.cpp  SpeedControl.cpp  Wheels.cpp  main.cpp
module_03/ex01/: CMakeLists.txt  command.hpp  main.cpp  packageReductionDiscount.hpp  thuesdayDiscount.hpp
module_03/ex02/: CMakeLists.txt  Circle.hpp  Rectangle.hpp  Shape.hpp  Triangle.hpp  main.cpp
module_03/ex03/: CMakeLists.txt
module_03/ex03/inc/: Apprentice.hpp  ContractWorker.hpp  Employee.hpp  EmployeeManager.hpp  TempWorker.hpp  hourlyEmployee.hpp  salariedEmployee.hpp
module_03/ex03/src/: Apprentice.cpp  ContractWorker.cpp  Employee.cpp  EmployeeManager.cpp  TempWorker.cpp  main.cpp
module_03/ex04/: CMakeLists.txt
module_03/ex04/inc/: FileLogger.hpp  HeaderLogger.hpp  ILogger.hpp  SimpleLogger.hpp
module_03/ex04/src/: FileLogger.cpp  main.cpp
module_04/ex00/: CMakeLists.txt
module_04/ex00/inc/: Course.hpp  Form.hpp  Person.hpp  Room.hpp
module_04/ex00/src/: main.cpp
module_04/ex01/: CMakeLists.txt
module_04/ex01/inc/: Course.hpp  Event.hpp  Form.hpp  Lists.hpp  Person.hpp  Room.hpp
module_04/ex01/src/: main.cpp
module_04/ex02/: CMakeLists.txt
module_04/ex02/inc/: Course.hpp  Event.hpp  Form.hpp  Lists.hpp  Person.hpp  Room.hpp  Staff.hpp
module_04/ex03/: CMakeLists.txt  output.xml
(+14 files in other folders)
